# kestrel

./: .gitignore  .travis.yml  Cargo.toml  MK64FN1M0VLL12.ld  Makefile  README.md  index.html  search-index.js  thumbv7em-none-eabi.json  thumbv7m-none-eabi.json
.cargo/: config
aster/: index.html  struct.AstBuilder.html
aster/arm/: index.html  struct.ArmBodyBuilder.html  struct.ArmBuilder.html  struct.ArmPatBuilder.html
aster/attr/: index.html  struct.AttrBuilder.html  struct.AttrListBuilder.html  struct.AttrNameValueBuilder.html
aster/block/: index.html  struct.BlockBuilder.html
aster/constant/: index.html  struct.Const.html  struct.ConstBuilder.html
aster/expr/: index.html  struct.ExprAssignBuilder.html  struct.ExprAssignLhsBuilder.html  struct.ExprAssignOpBuilder.html  struct.ExprBuilder.html  (+39 more)
bitmap/: DynamicSize.t.html  EightBits.t.html  FiveBits.t.html  FourBits.t.html  OneBit.t.html  SevenBits.t.html  SixBits.t.html  Slices.t.html  ThreeBits.t.html  TwoBits.t.html  index.html  sidebar-items.js  struct.Bitmap.html  struct.DynamicSize.html  struct.EightBits.html  struct.FiveBits.html  struct.FourBits.html  struct.OneBit.html  struct.SevenBits.html  struct.SixBits.html  struct.Slices.html  struct.ThreeBits.html  struct.TwoBits.html  trait.Element.html  trait.Storage.html
dynamo/: fn.plugin_registrar.html  index.html  sidebar-items.js
kestrel/: WDOG_TICKS.v.html  constant.WDOG_TICKS.html  fn.entry.html  index.html  sidebar-items.js
peregrine/: index.html  sidebar-items.js
scripts/: ghp_upload.sh  kstl_gh_upload.enc
src/: except.rs  lib.rs  main.rs
(+407 files in other folders)
