[package]
name = "kestrel"
version = "0.1.0"
authors = ["Zach Marcantel <zmarcantel@gmail.com>"]

[features]
default = ["peregrine/panic_default"]

[dependencies]
peregrine = { git = "https://github.com/austin-suborbitals/peregrine" }

[target.thumbv7em-none-eabi.dependencies.rust-libcore]
git = "https://github.com/hackndev/rust-libcore"
